-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
-
x86_64
-
windows
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (src\hotspot\share\classfile\classLoaderData.cpp:430), pid=48656, tid=19076
# assert(m != nullptr) failed: nullptr mirror
#
# JRE version: Java(TM) SE Runtime Environment (25.0) (fastdebug build 25-lworld5ea-LTS-2025-08-27-2105476.matias.s.saavedra.silva.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-lworld5ea-LTS-2025-08-27-2105476.matias.s.saavedra.silva.valhalla, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
# Problematic frame:
# V [jvm.dll+0x5b02b8] ClassLoaderData::loaded_classes_do+0x2e8
--------------- T H R E A D ---------------
Current thread (0x000001ca0fa94da0): JavaThread "Attach Listener" daemon [_thread_in_vm, id=19076, stack(0x0000007d07200000,0x0000007d07300000) (1024K)]
Stack: [0x0000007d07200000,0x0000007d07300000], sp=0x0000007d072fe760, free space=1017k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x5b02b8] ClassLoaderData::loaded_classes_do+0x2e8 (classLoaderData.cpp:430)
V [jvm.dll+0x5b341b] ClassLoaderDataGraph::loaded_classes_do_keepalive+0xeb (classLoaderDataGraph.cpp:337)
V [jvm.dll+0xdbe5f5] MetaspaceShared::link_shared_classes+0x135 (metaspaceShared.cpp:756)
V [jvm.dll+0x7373d8] DynamicArchive::dump_impl+0x38 (dynamicArchive.cpp:483)
V [jvm.dll+0x737305] DynamicArchive::dump_for_jcmd+0x65 (dynamicArchive.cpp:523)
V [jvm.dll+0xa94029] JVM_DumpDynamicArchive+0x189 (jvm.cpp:3705)
C 0x000001ca0753f3c2 (no source info available)
The last pc belongs to native method entry point (kind = native) (printed below).
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j jdk.internal.misc.CDS.dumpDynamicArchive(Ljava/lang/String;)V+0 java.base@25-lworld5ea
j jdk.internal.misc.CDS.dumpSharedArchive(ZLjava/lang/String;)Ljava/lang/String;+573 java.base@25-lworld5ea
v ~StubRoutines::call_stub 0x000001ca0753135d
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (src\hotspot\share\classfile\classLoaderData.cpp:430), pid=48656, tid=19076
# assert(m != nullptr) failed: nullptr mirror
#
# JRE version: Java(TM) SE Runtime Environment (25.0) (fastdebug build 25-lworld5ea-LTS-2025-08-27-2105476.matias.s.saavedra.silva.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-lworld5ea-LTS-2025-08-27-2105476.matias.s.saavedra.silva.valhalla, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
# Problematic frame:
# V [jvm.dll+0x5b02b8] ClassLoaderData::loaded_classes_do+0x2e8
--------------- T H R E A D ---------------
Current thread (0x000001ca0fa94da0): JavaThread "Attach Listener" daemon [_thread_in_vm, id=19076, stack(0x0000007d07200000,0x0000007d07300000) (1024K)]
Stack: [0x0000007d07200000,0x0000007d07300000], sp=0x0000007d072fe760, free space=1017k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x5b02b8] ClassLoaderData::loaded_classes_do+0x2e8 (classLoaderData.cpp:430)
V [jvm.dll+0x5b341b] ClassLoaderDataGraph::loaded_classes_do_keepalive+0xeb (classLoaderDataGraph.cpp:337)
V [jvm.dll+0xdbe5f5] MetaspaceShared::link_shared_classes+0x135 (metaspaceShared.cpp:756)
V [jvm.dll+0x7373d8] DynamicArchive::dump_impl+0x38 (dynamicArchive.cpp:483)
V [jvm.dll+0x737305] DynamicArchive::dump_for_jcmd+0x65 (dynamicArchive.cpp:523)
V [jvm.dll+0xa94029] JVM_DumpDynamicArchive+0x189 (jvm.cpp:3705)
C 0x000001ca0753f3c2 (no source info available)
The last pc belongs to native method entry point (kind = native) (printed below).
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j jdk.internal.misc.CDS.dumpDynamicArchive(Ljava/lang/String;)V+0 java.base@25-lworld5ea
j jdk.internal.misc.CDS.dumpSharedArchive(ZLjava/lang/String;)Ljava/lang/String;+573 java.base@25-lworld5ea
v ~StubRoutines::call_stub 0x000001ca0753135d
- links to
-
Commit(lworld)
openjdk/valhalla/a92246bf
-
Review(lworld)
openjdk/valhalla/1629