8367398: JCmdTestDynamicDump.java crashes on Windows with assert(m != nullptr) failed: nullptr mirror

Reviewed-by: fparain, coleenp